2009-02-06  Matthias Clasen  <mclasen@redhat.com>

	Make the new GtkAction code work with PolicyKit-gnome's use of actions.

	* gtk/gtkaction.c (gtk_action_[un]block_activate_from): Block
	the action.

	* gtk/gtkcheckmenuitem.c (gtk_check_menu_item_activatable_reset):
	* gtk/gtktogglebutton. (gtk_toggle_button_activatable_reset):
	* gtk/gtktoggletoolbutton.c (gtk_toggle_tool_button_activatable_reset):
	Work with non-toggle actions without complaining.

	* gtk/gtktoolbutton.c (gtk_tool_button_activatable_update): Updating
	the icon-name should not remove the label.

	* gtk/gtkimagemenuitem.c (activatable_update_icon_name): Also
	update the image when the icon name is set to NULL.

2009-02-06  Matthew Barnes  <mbarnes@redhat.com>

	* gtk/gtklabel.c (gtk_label_set_label): Accept a NULL string.

2009-02-03  Matthias Clasen  <mclasen@redhat.com>

	Bug 538439 – tooltip may appear in upper left corner instead of 
	over widget

	* gtk/gtktooltip.c (gtk_tooltip_trigger_query): Set the root 
	coordinates in the event correctly. Patch by Kristian Rietveld.

2009-02-02  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Bump version

2009-02-02  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.15.3 ===

	* NEWS: Updates

2009-02-01  Behdad Esfahbod  <behdad@gnome.org>

	* gtk/gtksettings.c (gtk_settings_class_init): Change the
	"gtk-fontconfig-timestamp" property from int to uint.  Doesn't affect
	anything in practice, except that  it overflows years later...

2009-02-01  Behdad Esfahbod  <behdad@gnome.org>

	Bug 569635 – fontchooser should reload list of families/styles on
	theme change

	* gtk/gtkfontsel.c (gtk_font_selection_class_init),
	(gtk_font_selection_init), (gtk_font_selection_finalize),
	(gtk_font_selection_ref_family), (gtk_font_selection_ref_face),
	(gtk_font_selection_reload_fonts),
	(gtk_font_selection_screen_changed),
	(gtk_font_selection_style_set),
	(gtk_font_selection_scroll_to_selection),
	(gtk_font_selection_scroll_on_map),