@@ -1,3 +1,12 @@
+2009-02-09  Takao Fujiwara  <takao.fujiwara@sun.com>
+
+	Bug 571015 – libprintbackend-cups has unlocalized strings
+
+	Reviewed by Matthias Clasen  <mclasen@redhat.com>
+
+	* modules/printbackends/cups/gtkprintbackendcups.c (handle_option):
+	Add translatable strings from ppd files.
+
 2009-02-06  Matthias Clasen  <mclasen@redhat.com>
 
 	Make the new GtkAction code work with PolicyKit-gnome's use of actions.
